<resources>
    <string name="app_name">Savitar</string>
    <string name="title_activity_home">Savitar Motors</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Settings</string>
    <string name="car_brands">Car Brands</string>
    <string name="videos_and_reviews">Videos and Reviews</string>
    <string name="place_order">Place Order</string>
    <string name="settings">Settings</string>
    <string name="savitar_motors">SAVITAR MOTORS</string>
    <string name="contacts">Contacts</string>
    <string name="help">Help</string>
    <string name="header_email">Not Logged In</string>
    <string name="user_name">USER X</string>
    <string name="home_text1">Buy new cars from world\'s \n famous car manufacturers \n  without a hassle</string>
    <string name="home_text_2">Get your ordered car \n delivered to your location \n  without delays \n [We are Speed Custodians]</string>
    <string name="home_text3">Secure Online Payment \n using PayPal</string>
    <string name="title_activity_brands">Brands</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="instagram">Savitar_motors</string>
</resources>
